--- a/app/views/storytellers/equipment/show.slim
+++ b/app/views/storytellers/equipment/show.slim
@@ -27,3 +27,4 @@ p
 
 .button-row
   = link_to "Edit Equipment", edit_storytellers_equipment_path(@equipment), class: 'button'
+  = link_to "Print Card", storytellers_print_equipment_path(@equipment), class: 'button', target: '_blank'
