--- a/app/views/storytellers/equipment/print_all.slim
+++ b/app/views/storytellers/equipment/print_all.slim
@@ -1,34 +1,4 @@
 - @characters.each do |character|
   - if character.equipment.present?
     - character.equipment.each do |equipment|
-      .card
-        h4 #{equipment.name}
-        dl
-          dt Size
-          dd #{equipment.size}
-          dt Durability
-          dd #{equipment.durability}
-          - if equipment.equipment_qualities.present?
-            dt Qualities
-            dd.list
-              ul
-                - equipment.equipment_qualities.group_by{|eq| eq.id }.each do |i, q|
-                  li
-                    strong #{q[0].name}:
-                    = " #{q[0].description}"
-                    - if q.length > 1
-                      = " x #{q.length}"
-        .row
-          .left
-            p
-              strong Health:
-            .boxes
-              - (equipment.size + equipment.durability).times do |i|
-                .box
-                  i.fa.fa-square-o
-                  - if i > equipment.durability - 1
-                    span.mod -1
-          .right
-            p
-              strong For Character:
-              = " #{character.name}"
+      = render partial: 'print_single', locals: {equipment: equipment, character: character}
