--- a/app/views/storytellers/rituals/index.slim
+++ b/app/views/storytellers/rituals/index.slim
@@ -6,6 +6,7 @@
 
   .button-row.right
     = link_to "New Ritual", new_storytellers_ritual_path, class: 'button'
+    = link_to "Print All", storytellers_print_all_rituals_path, class: 'button', target: '_blank'
 
   table.table
     thead
@@ -13,13 +14,14 @@
       th Principle
       th
       th
+      th
     tbody
       - if @rituals
         - @rituals.each do |ritual|
           tr
-            td
-              = link_to ritual.name, storytellers_ritual_path(ritual)
+            td #{link_to ritual.name, storytellers_ritual_path(ritual)}
             td #{ritual.principle}
+            td #{link_to "Print", storytellers_print_ritual_path(ritual), target: '_blank'}
             td
               = link_to "Edit", edit_storytellers_ritual_path(ritual)
             td
