Add links to dashboard

--- a/app/views/storytellers/dashboard/index.slim
+++ b/app/views/storytellers/dashboard/index.slim
@@ -6,6 +6,12 @@ ul
   li
     = link_to "Print Character Sheets", characters_print_path, target: '_blank'
   li
+    = link_to "Print Mechanics Sheets", characters_print_mechanics_path, target: '_blank'
+  li
+    = link_to "Print Rituals", storytellers_print_all_rituals_path, target: '_blank'
+  li
+    = link_to "Print Equipment", storytellers_print_all_equipment_path, target: '_blank'
+  li
     = link_to "Experience", storytellers_experience_path
   li
     = link_to "Downtime Periods", storytellers_downtime_periods_path
