display disabled buttons with helpful text when submissions are closed

--- a/app/views/characters/wizard_challenges_advantages.slim
+++ b/app/views/characters/wizard_challenges_advantages.slim
@@ -91,6 +91,8 @@
       = f.submit "Save", id: 'save'
       - if @character.status == 0 and Setting.quantitative_open
         = f.submit "Finish", id: 'save-submit'
+      - else
+        = f.submit "Mechanical Proposals Closed", id: 'save-submit', disabled: true
 
   .overlay#advantages-overlay
     .modal
