--- a/app/views/characters/_form.slim
+++ b/app/views/characters/_form.slim
@@ -187,6 +187,11 @@
     - if @character.status == 0 and (current_user == @character.user or @character.user.nil?) and !current_user.is_storyteller and ((Setting.qualitative_open and @character.use_extended) or (Setting.quantitative_open and !@character.use_extended))
       = f.hidden_field :status
       = f.submit "Save and Submit", id: 'save-submit'
+    - elsif @character.status == 0 and current_user == @character.user
+      - if @character.use_extended and !Setting.qualitative_open
+        = f.submit "Extended Written Proposals Closed", id: 'save-submit', disabled: true
+      - elsif !Setting.quantitative_open
+        = f.submit "Mechanical Proposals Closed", id: 'save-submit', disabled: true
 
   .overlay#advantages-overlay
     .modal
