--- a/app/views/characters/wizard_questionnaire.slim
+++ b/app/views/characters/wizard_questionnaire.slim
@@ -60,6 +60,8 @@
       - else
         - if @character.status == 0 and Setting.qualitative_open
           = f.submit "Save and Submit", id: 'save-submit'
+        - else
+          = f.submit "Extended Written Proposals Closed", id: 'save-submit', disabled: true
 
   = javascript_include_tag 'wizard'
   = javascript_include_tag 'characters'
