add disabled button state

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -23,6 +23,10 @@
     color: $green;
     background-color: $white;
   }
+
+  &[disabled] {
+    background-color: $silver;
+  }
 }
 
 .button-secondary {
