remove hover/focus states for disabled button state

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -26,6 +26,11 @@
 
   &[disabled] {
     background-color: $silver;
+
+    &:hover, &:focus {
+      background-color: $silver;
+      color: $white;
+    }
   }
 }
 
