Add responsive plugin to datatables and pass params to some large tables that need it

--- a/app/assets/stylesheets/components/_datatables.scss
+++ b/app/assets/stylesheets/components/_datatables.scss
@@ -14,6 +14,45 @@ table.dataTable {
       text-align: left;
     }
   }
+
+  tbody {
+    tr {
+      &.odd {
+        background-color: rgba($silver, .25);
+
+        & + .child {
+          background-color: rgba($silver, .25);
+        }
+      }
+
+      &.child {
+        ul {
+          display: flex;
+
+          li {
+            display: flex;
+            .dtr-title {
+              font-weight: bold;
+              margin-right: 5px;
+
+              &:empty {
+                display: none;
+              }
+            }
+
+            .dtr-data {
+              margin-right: 10px;
+              display: block;
+
+              &:empty {
+                display: none;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
 }
 
 table.plain {
