--- a/app/views/characters/index.slim
+++ b/app/views/characters/index.slim
@@ -13,13 +13,13 @@
   table.table
     thead
       tr
-        th Name
+        th data-priority="1" class="desktop tablet-l tablet-p mobile-l mobile-p" Name
         - if current_user.is_storyteller?
-          th Player Name
-        th Status
-        th
-        th
-        th
+          th data-priority="1" class="desktop tablet-l tablet-p mobile-l mobile-p" class="desktop tablet-l tablet-p mobile-l mobile-p" Player Name
+        th data-priority="1" class="desktop tablet-l tablet-p mobile-l mobile-p" Status
+        th data-priority="99" class="desktop tablet-l tablet-p"
+        th data-priority="99" class="desktop tablet-l tablet-p"
+        th data-priority="99" class="desktop tablet-l tablet-p"
     tbody
       - @characters.each do |character|
         tr
