--- a/app/views/characters/index.slim
+++ b/app/views/characters/index.slim
@@ -36,7 +36,7 @@
               = link_to "Downtime Actions", character_downtime_actions_path(character)
           td
             - unless character.status > 0 and !current_user.is_storyteller
-              = link_to "Edit", edit_character_path(character)
+              = link_to "Edit", character_wizard_page_path(character, 1)
             - if character.status > 1 and !current_user.is_storyteller and character.current_xp > 0
               = link_to "Spend Experience", edit_character_path(character)
           td
