--- a/app/views/characters/show.slim
+++ b/app/views/characters/show.slim
@@ -2,6 +2,9 @@
   h2
     = "Character: #{@character.name}"
 
+  .button-row.right
+    = link_to "Edit in Wizard", character_wizard_page_path(@character, 1), class: 'button'
+
   .form-row.basic-stats
     .stat
       strong Name:
