--- a/app/views/characters/_print_sheet.slim
+++ b/app/views/characters/_print_sheet.slim
@@ -28,7 +28,12 @@ h2 #{character.name}
               .box
                 .ico-stability
         .stability-modifiers
-
+          - if character.stability > 4
+            .mod +#{character.stability - 4} to mundane perception
+            .mod -#{character.stability - 4} to unnatural perception
+          - elsif character.stability < 4
+            .mod -#{4 - character.stability} to mundane perception
+            .mod +#{4 - character.stability} to unnatural perception
       .row
         strong Willpower
         .boxes
