tweak column priorities and flex slightly

--- a/app/assets/stylesheets/components/_datatables.scss
+++ b/app/assets/stylesheets/components/_datatables.scss
@@ -28,6 +28,7 @@ table.dataTable {
       &.child {
         ul {
           display: flex;
+          flex-wrap: wrap;
 
           li {
             display: flex;
