--- a/app/views/characters/index.slim
+++ b/app/views/characters/index.slim
@@ -14,15 +14,15 @@
   table.table
     thead
       tr
-        th data-priority="1" class="desktop tablet-l tablet-p mobile-l mobile-p" Name
+        th data-priority="1" Name
         - if current_user.is_storyteller?
-          th data-priority="1" class="desktop tablet-l tablet-p mobile-l mobile-p" class="desktop tablet-l tablet-p mobile-l mobile-p" Player Name
-          th data-priority="1" class="desktop tablet-l tablet-p mobile-l mobile-p" class="desktop tablet-l tablet-p mobile-l mobile-p" Proposal Type
-          th data-priority="1" class="desktop tablet-l tablet-p mobile-l mobile-p" class="desktop tablet-l tablet-p mobile-l mobile-p" NPC?
-        th data-priority="1" class="desktop tablet-l tablet-p mobile-l mobile-p" Status
-        th data-priority="99" class="desktop tablet-l tablet-p"
-        th data-priority="99" class="desktop tablet-l tablet-p"
-        th data-priority="99" class="desktop tablet-l tablet-p"
+          th data-priority="1" Player Name
+          th data-priority="98" Proposal Type
+          th data-priority="98" NPC?
+        th data-priority="1" Status
+        th data-priority="99"
+        th data-priority="99"
+        th data-priority="99"
     tbody
       - @characters.each do |character|
         tr
