Fix nesting issue on show page, add edit link to NPC sheet

--- a/app/views/characters/_npc_sheet.slim
+++ b/app/views/characters/_npc_sheet.slim
@@ -2,6 +2,9 @@
   h2
     = "NPC: #{character.name}"
 
+  .button-row.right
+    = link_to "Edit NPC", edit_character_path(@character), class: 'button'
+
   .form-row.basic-stats
     .stat
       strong Name:
