Add some fields to equipment such that we can use it to represent Strange Forms

--- a/app/views/storytellers/equipment/_form.slim
+++ b/app/views/storytellers/equipment/_form.slim
@@ -22,6 +22,10 @@
   = f.label :character_ids, "Characters With This Equipment"
   = f.collection_select :character_ids, Character.all.order(:name), :id, :name, {}, {multiple: true}
 
+.form-row
+  = f.label :description
+  = f.text_area :description
+
 .button-row
   = f.submit "Save", class: 'button'
 
