--- a/app/views/storytellers/equipment/print.slim
+++ b/app/views/storytellers/equipment/print.slim
@@ -1,1 +1,1 @@
-= render partial: 'print_single', locals: {equipment: @equipment, character: nil}
+= render partial: 'print_single', locals: {equipment: @equipment, character: nil, markdown: @markdown}
