--- a/app/views/characters/_sheet.slim
+++ b/app/views/characters/_sheet.slim
@@ -178,10 +178,12 @@ section#questionnaire
       .equipment-item.card
         h4 #{equipment.name}
         dl
-          dt Size
-          dd #{equipment.size}
-          dt Durability
-          dd #{equipment.durability}
+          - if equipment.size.present?
+            dt Size
+            dd #{equipment.size}
+          - if equipment.durability.present?
+            dt Durability
+            dd #{equipment.durability}
           - if equipment.equipment_qualities.present?
             dt Qualities
             dd.list
@@ -192,14 +194,17 @@ section#questionnaire
                     = " #{q[0].description}"
                     - if q.length > 1
                       = " x #{q.length}"
-        p
-          strong Health:
-        .boxes
-          - (equipment.size + equipment.durability).times do |i|
-            .box
-              i.fa.fa-square-o
-              - if i > equipment.durability - 1
-                span.mod -1
+        = raw @markdown.render(equipment.description)
+
+        - if equipment.size.present? or equipment.durability.present?
+          p
+            strong Health:
+          .boxes
+            - (equipment.size + equipment.durability).times do |i|
+              .box
+                i.fa.fa-square-o
+                - if i > equipment.durability - 1
+                  span.mod -1
 
 section#experience
   h3.section Experience
