--- a/app/views/storytellers/dashboard/index.slim
+++ b/app/views/storytellers/dashboard/index.slim
@@ -46,4 +46,6 @@ h3 System
 
 ul
   li
+    = link_to "Statistics", storytellers_statistics_path
+  li
     = link_to "Settings", storytellers_settings_path
