compact skills & special training

--- a/app/assets/stylesheets/print.scss
+++ b/app/assets/stylesheets/print.scss
@@ -159,7 +159,7 @@ h2 {
     .row {
       display: flex;
       justify-content: space-between;
-      padding: 5px 0;
+      padding: 0 0 3px;
 
       .numeric {
         display: none;
