--- a/app/assets/stylesheets/components/_page-setup.scss
+++ b/app/assets/stylesheets/components/_page-setup.scss
@@ -10,6 +10,11 @@ body {
   flex-direction: column;
   align-items: center;
 
+  &.nav-open {
+    max-height: 100vh;
+    overflow: hidden;
+  }
+
   > header {
     width: 100%;
   }
