--- a/app/views/characters/_sheet.slim
+++ b/app/views/characters/_sheet.slim
@@ -108,6 +108,10 @@ section#mechanics.show
 
   h3.section Derived Stats
   .derived-stats
+    .stat.stability
+      strong Stability:
+      = character.stability
+      
     .stat.willpower
       strong Willpower:
       = character.willpower
