always loop 7 times instead of [stability] times

--- a/app/views/characters/_print_sheet.slim
+++ b/app/views/characters/_print_sheet.slim
@@ -25,7 +25,7 @@ h2 #{character.name}
           = "Stability"
         .stability-content
           .boxes.stability
-            - character.stability.times do |i|
+            - 7.times do |i|
               .box
                 - if i == character.stability-1
                   .ico-stability.current
