add markdown rendering

--- a/app/views/characters/dramatis.slim
+++ b/app/views/characters/dramatis.slim
@@ -6,4 +6,4 @@
       h3 #{character.name}
 
       .content
-        = character.public_blurb
+        = raw @markdown.render(character.public_blurb)
