--- a/app/views/characters/_npc_form.slim
+++ b/app/views/characters/_npc_form.slim
@@ -22,7 +22,7 @@
 
   h3.section Public Blurb
   = f.text_area :public_blurb
-  
+
   h3.section Attributes
   .flex-container.attributes
     - @attributes.each do |cat,vals|
@@ -86,6 +86,7 @@
         = hidden_field_tag "character[character_has_advantages][][advantage_id]", advantage.advantage.id
         = hidden_field_tag "character[character_has_advantages][][rating]", advantage.rating
         = hidden_field_tag "character[character_has_advantages][][specification]", advantage.specification
+        = hidden_field_tag "character[character_has_advantages_attributes][][_destroy]", ""
         = link_to "<i class='fa fa-edit'></i>".html_safe, "#", class: 'advantage-edit'
         = link_to "<i class='fa fa-minus-circle'></i>".html_safe, "#", class: 'advantage-delete'
 
@@ -125,6 +126,7 @@
         = hidden_field_tag "character[character_has_challenges][][custom_name]", challenge.custom_name
         = hidden_field_tag "character[character_has_challenges][][custom_description]", challenge.custom_description
         = hidden_field_tag "character[character_has_challenges][][is_creature_challenge]", challenge.is_creature_challenge
+        = hidden_field_tag "character[character_has_challenges_attributes][][_destroy]", ""
 
   h3.section Derived Stats
   .derived-stats
