--- a/app/views/characters/_npc_form.slim
+++ b/app/views/characters/_npc_form.slim
@@ -22,7 +22,7 @@
 
   h3.section Public Blurb
   = f.text_area :public_blurb
-  
+
   h3.section Attributes
   .flex-container.attributes
     - @attributes.each do |cat,vals|
@@ -81,11 +81,12 @@
         - if advantage.advantage.requires_specification
           = "(<span class='specification'>#{advantage.specification}</span>) ".html_safe
         - if advantage.advantage.allowed_ratings.split(",").length > 1
-          = " <span class='rating'>#{advantage.rating}</span>".html_safe
-        = hidden_field_tag "character[character_has_advantages][][id]", advantage.id
-        = hidden_field_tag "character[character_has_advantages][][advantage_id]", advantage.advantage.id
-        = hidden_field_tag "character[character_has_advantages][][rating]", advantage.rating
-        = hidden_field_tag "character[character_has_advantages][][specification]", advantage.specification
+          = " <span class='rating'>#{advantage.rating}</span> ".html_safe
+        = hidden_field_tag "character[character_has_advantages_attributes][][id]", advantage.id
+        = hidden_field_tag "character[character_has_advantages_attributes][][advantage_id]", advantage.advantage.id
+        = hidden_field_tag "character[character_has_advantages_attributes][][rating]", advantage.rating
+        = hidden_field_tag "character[character_has_advantages_attributes][][specification]", advantage.specification
+        = hidden_field_tag "character[character_has_advantages_attributes][][_destroy]", ""
         = link_to "<i class='fa fa-edit'></i>".html_safe, "#", class: 'advantage-edit'
         = link_to "<i class='fa fa-minus-circle'></i>".html_safe, "#", class: 'advantage-delete'
 
@@ -120,11 +121,12 @@
         - elsif challenge.challenge.description.present?
           .description
             = raw @markdown.render(challenge.challenge.description)
-        = hidden_field_tag "character[character_has_challenges][][id]", challenge.id
-        = hidden_field_tag "character[character_has_challenges][][challenge_id]", challenge.challenge.id
-        = hidden_field_tag "character[character_has_challenges][][custom_name]", challenge.custom_name
-        = hidden_field_tag "character[character_has_challenges][][custom_description]", challenge.custom_description
-        = hidden_field_tag "character[character_has_challenges][][is_creature_challenge]", challenge.is_creature_challenge
+        = hidden_field_tag "character[character_has_challenges_attributes][][id]", challenge.id
+        = hidden_field_tag "character[character_has_challenges_attributes][][challenge_id]", challenge.challenge.id
+        = hidden_field_tag "character[character_has_challenges_attributes][][custom_name]", challenge.custom_name
+        = hidden_field_tag "character[character_has_challenges_attributes][][custom_description]", challenge.custom_description
+        = hidden_field_tag "character[character_has_challenges_attributes][][is_creature_challenge]", challenge.is_creature_challenge
+        = hidden_field_tag "character[character_has_challenges_attributes][][_destroy]", ""
 
   h3.section Derived Stats
   .derived-stats
