add stability field for NPCs

--- a/app/views/characters/_npc_form.slim
+++ b/app/views/characters/_npc_form.slim
@@ -128,8 +128,11 @@
         = hidden_field_tag "character[character_has_challenges][][is_creature_challenge]", challenge.is_creature_challenge
         = hidden_field_tag "character[character_has_challenges_attributes][][_destroy]", ""
 
-  h3.section Derived Stats
+  h3.section Your Relevant Numbers
   .derived-stats
+    .stat
+      = f.label :stability
+      = f.number_field :stability
     .stat
       = f.label :health
       = f.number_field :health
