--- a/app/assets/stylesheets/print.scss
+++ b/app/assets/stylesheets/print.scss
@@ -11,8 +11,20 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
+h2, h3 {
+  text-align: left;
+}
+
 h2 {
-  text-align: center;
+  border-color: black;
+  padding-bottom: 10px;
+}
+
+h3 {
+  border-bottom: 3px solid $black;
+  display: inline-block;
+  padding-right: 24px;
+  position: relative;
 }
 
 .sheet {
@@ -62,6 +74,49 @@ h2 {
 
     .column-item {
       break-inside: avoid;
+    }
+  }
+
+  .advantages {
+    page-break-inside: avoid;
+    ul {
+      columns: 200px 2;
+
+      li {
+        break-inside: avoid;
+
+        .name {
+          font-weight: bold;
+        }
+
+        ul {
+          list-style: disc;
+          margin-left: 2em;
+          margin-top: .5em;
+          li {
+            margin-bottom: 0 !important;
+          }
+        }
+      }
+    }
+  }
+}
+
+.flex-container {
+  display: flex;
+  flex-wrap: nowrap;
+
+  .column {
+    .row {
+      padding: 0;
+    }
+  }
+
+  &#skills, &#attributes {
+    .column {
+      max-width: 33%;
+      flex-grow: 0;
+      min-width: 300px;
     }
   }
 }
