add stability to npc sheet

--- a/app/views/characters/_npc_sheet.slim
+++ b/app/views/characters/_npc_sheet.slim
@@ -88,6 +88,10 @@
 
   h3.section Derived Stats
   .derived-stats
+    .stat.stability
+      strong Stability:
+      = character.stability
+      
     .stat.willpower
       strong Willpower:
       = character.willpower
