--- a/app/assets/stylesheets/print.scss
+++ b/app/assets/stylesheets/print.scss
@@ -174,6 +174,7 @@ ul#advantages {
   dl {
     display: flex;
     flex-wrap: wrap;
+    line-height: 1.2;
     dt {
       width: 12vw;
       font-weight: bold;
