show motivation on NPC character sheets

--- a/app/views/characters/_print_npc_sheet.slim
+++ b/app/views/characters/_print_npc_sheet.slim
@@ -3,6 +3,9 @@ h2 #{character.name}
 h3 Motivation
 
 .motivation
+  = raw markdown.render(character.motivation)
+
+.public_blurb
   = raw markdown.render(character.public_blurb)
 
 .stats
