Add public blurb heading to public blurb

--- a/app/views/characters/_print_npc_sheet.slim
+++ b/app/views/characters/_print_npc_sheet.slim
@@ -5,6 +5,8 @@ h3 Motivation
 .motivation
   = raw markdown.render(character.motivation)
 
+h3 Public Blurb
+
 .public_blurb
   = raw markdown.render(character.public_blurb)
 
