--- a/app/views/downtime_actions/_form.slim
+++ b/app/views/downtime_actions/_form.slim
@@ -16,6 +16,10 @@
     = f.select :size, options_for_select([["Regular", 0], ["Large", 1]])
 
   .form-row
+    = f.label :goal
+    = f.text_field :goal
+
+  .form-row
     = f.label :description
     = f.text_area :description
 
