remove submission step from downtime actions

--- a/app/views/downtime_actions/index.slim
+++ b/app/views/downtime_actions/index.slim
@@ -6,15 +6,14 @@ h2 #{@character.name}: Downtime Actions
     .downtime-period
       h3 #{downtime_period.title}
 
+      - unless downtime_period.downtimes_open
+      
+        center Downtimes for this period are closed.
+
       - if downtime_period.downtimes_open and @character.status == 2
         .button-row.right
-          - if @character.downtime_actions.where(downtime_period_id: downtime_period.id, status: 1).present? and downtime_period.downtimes_open
-            = form_tag(character_reopen_downtime_actions_path(@character, downtime_period))
-              = button_tag "Reopen Downtime Actions", type: 'submit', class: 'button'
-          - elsif downtime_period.downtimes_open
-            = link_to "New Downtime Action", new_character_downtime_period_downtime_action_path(@character, downtime_period), class: 'button'
-            = form_tag(character_submit_downtime_actions_path(@character, downtime_period))
-              = button_tag "Submit Downtime Actions", type: 'submit', class: 'button'
+          = link_to "New Downtime Action", new_character_downtime_period_downtime_action_path(@character, downtime_period), class: 'button'
+
       .downtime-action
         - if @character.downtime_actions.where(downtime_period_id: downtime_period.id)
           - @character.downtime_actions.where(downtime_period_id: downtime_period.id).each do |action|
