fix character email links

--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -54,7 +54,7 @@
     <table cellpadding="0" cellspacing="0" border="0" width="600">
       <tr>
         <td bgcolor="#333333" color="#FFFFFF" class="content-header" height="60" valign="middle">
-          <h1><a href="http://characters.askagainlater.com/">AAL Character System</a></h1>
+          <h1><a href="http://askagainevenlater.herokuapp.com/">AAL Character System</a></h1>
         </td>
       </tr>
       <tr>
@@ -63,7 +63,7 @@
 
           <p>Someone has requested a link to change your password. You can do this through the link below.</p>
 
-          <p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token, :host => 'characters.askagainlater.com') %></p>
+          <p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token, :host => 'askagainevenlater.herokuapp.com') %></p>
 
           <p>If you didn't request this, please ignore this email.</p>
           <p>Your password won't change until you access the link above and create a new one.</p>
