--- a/app/views/devise/mailer/password_change.html.erb
+++ b/app/views/devise/mailer/password_change.html.erb
@@ -54,7 +54,7 @@
     <table cellpadding="0" cellspacing="0" border="0" width="600">
       <tr>
         <td bgcolor="#333333" color="#FFFFFF" class="content-header" height="60" valign="middle">
-          <h1><a href="http://characters.askagainlater.com/">AAL Character System</a></h1>
+          <h1><a href="http://askagainevenlater.herokuapp.com/">AAL Character System</a></h1>
         </td>
       </tr>
       <tr>
