--- a/app/views/characters/_sheet.slim
+++ b/app/views/characters/_sheet.slim
@@ -59,10 +59,10 @@ section#mechanics.show
               = val
             .dots
               - eval("character.#{val.parameterize("_")}").times do
-                = icon 'circle'
+                = fa_icon 'circle'
 
               - (5-eval("character.#{val.parameterize("_")}")).times do
-                = icon 'circle-o'
+                = fa_icon 'circle-o'
 
   h3.section Skills and Special Training
 
@@ -77,10 +77,10 @@ section#mechanics.show
               = val
             .dots
               - eval("character.#{val.parameterize("_")}").times do
-                = icon 'circle'
+                = fa_icon 'circle'
 
               - (5-eval("character.#{val.parameterize("_")}")).times do
-                = icon 'circle-o'
+                = fa_icon 'circle-o'
 
   h3.section Advantages
 
